# Zany80

./: .ccls  .gitignore  .gitmodules  .travis.yml  .travis.yml~  CHANGELOG.md  CMakeLists.txt  COPYING  Dockerfile  ERRORS.md  Makefile  README.md  TODO.md  Zany80.geany  build.py  build.zig  fips  fips.yml  l  symbols  zany80.cppcheck
BIOS/: Makefile  test_rom.asm  version_info
backend/: d3d11.cc  emsc.cc  glfw.cc  posix.c  windows.c  windows.cc
cmake_modules/: FindLIBDL.cmake  FindLIBLIB.cmake  FindLuaJIT.cmake  FindSFML.cmake  FindZ80CPP.cmake  MINGW.cmake  MinGW64.cmake
docs/: IDEAS.md  Plugins.md  Repositories.md  TODO.md  banking.md  ports.md  status flags
fips-files/: include.cmake
headers/: SIMPLE.h
include/: Plugin.hpp  Plugins.hpp  Text.hpp  Tool.hpp  Zany80.hpp  Zenith80.hpp
lib/scas/: .build.yml  .gitignore  8xp.h  CMakeLists.txt  README.md  assembler.c  assembler.h  directives.c  directives.h  enums.h  errors.c  instructions.c  instructions.h  linker.c  linker.h  log.c  log.h  match.h  md5.c  md5.h  merge.c  merge.h  operators.c  privatize.c  privatize.h  runtime.c  runtime.h  scas.1.txt  scdump.1.txt  scwrap.1.txt  stack.c
lib/scas/assembler/: assembler.c  directives.c  privatize.c
lib/scas/common/: errors.c  expression.c  format.c  functions.c  hashtable.c  instructions.c  io.c  list.c  match.c  objects.c  readline.c  stringop.c
lib/scas/doc/: sobj
lib/scas/include/: assembler.h  bin.h  errors.h  expression.h  format.h  functions.h  hashtable.h  io.h  list.h  log.h  objects.h  runtime.h  stack.h  stringop.h
lib/scas/linker/: 8xp.c  bin.c  linker.c  merge.c
lib/scas/scas/: flags.c  flags.h  main.c
lib/scas/scdump/: main.c
lib/scas/scwrap/: main.c
lib/scas/tables/: generate.c
misc/: bios.rom  icon.rc  (+2 more)
plugins/: CMakeLists.txt  editor.c  scas.c  serial.c
plugins/BIOSLauncher/: BIOSLauncher.cpp  CMakeLists.txt
plugins/CartridgeManager/: CMakeLists.txt  Cartridge.hpp  CartridgeManager.cpp
plugins/assembler/: CMakeLists.txt
plugins/assembler/dummy/: dummy.c
plugins/assembler/official_z80/: CMakeLists.txt  MachineObject.cpp  assembler.cpp  instructions.cpp
plugins/assembler/official_z80/include/: MachineObject.hpp  assembler.hpp  instructions.hpp
plugins/assembler/scas/: CMakeLists.txt  bin.h  directives.c  errors.h  expression.c  functions.c  instructions.c  instructions.h  list.h  log.cc  main.cc  main.cpp  match.h  merge.c  objects.c  privatize.h  runtime.h  scas.c  scas.h  stringop.h  z80.c  z80_set.h
plugins/assembler/scas-old/: CMakeLists.txt  main.cpp
plugins/compiler/: CMakeLists.txt
plugins/compiler/kcc/: CMakeLists.txt  main.cpp
plugins/cpu/: CMakeLists.txt
plugins/cpu/include/: CPU.hpp
plugins/cpu/limn/: CMakeLists.txt  internals.h  limn.c  limn.h  main.c  platboard.c  rom.c
plugins/cpu/z80/: CMakeLists.txt  z80.cpp
plugins/cpu/z80cpp_core/: BIOSPlugin.cpp  BIOSPlugin.hpp  CMakeLists.txt  core.cpp  z80cpp_core.cpp  z80cpp_core.hpp
plugins/cpu/z80cpp_core/src/: MMU.cc  MMU.h  ZanyCore.cc  ZanyCore.h  interface.cc
plugins/display/: CMakeLists.txt  Display.h  main.c  main.cc  ring_buffer.c  ring_buffer.h  serial.c
plugins/dragonfruit/: Makefile  README.md  backends.h  compiler.c  interface.c  internals.h  lexer.c  limn.c  list.c  main.c  optimizer.c  stretchy_buffer.h  stringop.c
plugins/dragonfruit/scas/: list.h
plugins/editor/: CMakeLists.txt  Editor.h  Identifiers.cc  Identifiers.h  Z80Instructions.c  Z80Instructions.h  interface.cc  main.c  main.cc
plugins/editor/official/: CMakeLists.txt  main.cpp
plugins/example/: CMakeLists.txt  main.c
plugins/gpu/: CMakeLists.txt
plugins/gpu/experimental_dualcore/: CMakeLists.txt  main.cpp
plugins/gpu/zany_old/: CMakeLists.txt  zany_old.cpp
plugins/include/Zany80/: CPU.hpp  Generic.hpp  RAM.hpp  Runner.hpp
plugins/lua/: CMakeLists.txt
plugins/lua/Shell/: main.lua
plugins/lua/Z80/: cleanup.lua  main.lua
plugins/mmu/: CMakeLists.txt  MMU.cpp
plugins/plugin_manager/: CMakeLists.txt  plugin_manager.cpp
plugins/plugin_manager/includes/: plugin_manager.hpp
plugins/ram/: CMakeLists.txt  RAM.cpp
plugins/rom_runner/: CMakeLists.txt  rom_runner.cpp
plugins/serial_debug/: CMakeLists.txt  main.c
plugins/simple_limn/: CMakeLists.txt  buserred.rom  internals.h  limn.c  limn.h  main.c  platboard.c  rom.c
plugins/simple_shell/: CMakeLists.txt  commands.cpp  interface.cc  simple_shell.cc  simple_shell.cpp  simple_shell.h  simple_shell.hpp
plugins/toolchains/: CMakeLists.txt
plugins/toolchains/assemblers/: CMakeLists.txt
plugins/toolchains/assemblers/dummy/: CMakeLists.txt
plugins/toolchains/assemblers/scas/: CMakeLists.txt  assembler.c  assembler.h  bin.c  directives.c  errors.c  expression.h  flags.c  format.c  functions.c  functions.h  instructions.c  instructions.h  linker.c  linker.h  list.h  log.h  match.c  md5.c  merge.h  objects.h  operators.h  privatize.c  readline.c  readline.h  runtime.h  scas.c  stack.h  stringop.c  stringop.h  version.h.in
plugins/toolchains/dragonfruit/: CMakeLists.txt  backends.h  compiler.c  interface.c  internals.h  lexer.c  lexer.h  limn.c  optimizer.h
plugins/z80cpp/: .gitignore  CMakeLists.txt  README.md  fips.yml
plugins/z80cpp/.kdev4/: z80cpp.kdev4
plugins/z80cpp/example/: README.md  z80sim.cpp  z80sim.h
plugins/z80cpp/include/: z80.h  z80operations.h  z80peripheral.h
plugins/z80cpp/src/: z80.cpp  z80peripheral.cpp
src/: CMakeLists.txt  Drawing.cpp  GenericException.cpp  LuaAPI.cpp  LuaPlugin.cpp  Plugin.cc  SFMLLuaBinding.cpp  Text.cpp  XML.cc  XML.cpp  Zany80.cpp  config.h.in  data.c  default_config.lua  editor.c  editor.h  global.h  graphics.c  graphics.cc  graphics.h  graphics_legacy.cpp  icon.cpp  icon.rc  init_plugins.lua  license.c  license.h  main.c  main.cc  main.cpp  main.zig  plugins.c  repositories.c  repositories.zig  ring_buffer.c  scas.c  scas.h  serial.c  serial.h  stb.c  util.cc  (+6 more)
src/abi1/: Plugin.cc
src/global_rt/: CMakeLists.txt  basic_functions.lua  global_initialization.lua  main.lua
src/lib/scas/: stringop.c
src/tools/: CMakeLists.txt  Shell.cpp
(+149 files in other folders)
