#add_subdirectory(cpu)
#add_subdirectory(gpu)
#add_subdirectory(mmu)
#add_subdirectory(CartridgeManager)
#add_subdirectory(assembler)
#add_subdirectory(compiler)
#add_subdirectory(rom_runner)
#add_subdirectory(BIOSLauncher)
#add_subdirectory(simple_shell)
#add_subdirectory(editor)

add_subdirectory(lua)
