if (FIPS_EMSCRIPTEN)
	fips_begin_module(display)
else()
	fips_begin_sharedlib(display)
endif()
fips_files(main.cc)
fips_include_directories(${CMAKE_CURRENT_BINARY_DIR})
if (FIPS_EMSCRIPTEN)
	fips_end_module()
else()
	fips_end_sharedlib()
endif()

set_target_properties(display PROPERTIES PREFIX "")

if (FIPS_LINUX)
	install(TARGETS display DESTINATION share/zany80/plugins)
elseif(FIPS_WINDOWS)
	install(TARGETS display DESTINATION plugins)
endif()
