set(VERSION 1.0.3.0)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/editor_config.h)

if (FIPS_EMSCRIPTEN)
	fips_begin_module(editor)
else()
	fips_begin_sharedlib(editor)
endif()
fips_src(.)
fips_include_directories(${CMAKE_CURRENT_BINARY_DIR})
fips_deps(imguitexteditor)
if (FIPS_EMSCRIPTEN)
	fips_end_module()
else()
	fips_end_sharedlib()
endif()

set_target_properties(editor PROPERTIES PREFIX "")

if (FIPS_LINUX)
	install(TARGETS editor DESTINATION share/zany80/plugins)
elseif(FIPS_WINDOWS)
	install(TARGETS editor DESTINATION plugins)
endif()
