install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Z80 DESTINATION .)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Z80/main.lua ${CMAKE_BINARY_DIR}/Z80/main.lua COPYONLY)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Shell DESTINATION .)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Shell/main.lua ${CMAKE_BINARY_DIR}/Shell/main.lua COPYONLY)
