if(WIN32)
	install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Z80 DESTINATION .)
	install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Shell DESTINATION .)
else()
	install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Z80 DESTINATION share/zany80)
	install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Shell DESTINATION share/zany80)
endif()

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Z80/main.lua ${CMAKE_BINARY_DIR}/Z80/main.lua COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Shell/main.lua ${CMAKE_BINARY_DIR}/Shell/main.lua COPYONLY)
