set(VERSION 0.0.1.14)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/shell_config.h)

if (FIPS_EMSCRIPTEN)
	fips_begin_module(simple_shell)
else()
	fips_begin_sharedlib(simple_shell)
endif()
fips_files(simple_shell.cc)
fips_include_directories(${CMAKE_CURRENT_BINARY_DIR})
if (FIPS_EMSCRIPTEN)
	fips_end_module()
else()
	fips_end_sharedlib()
endif()

set_target_properties(simple_shell PROPERTIES PREFIX "")

if (FIPS_LINUX)
	install(TARGETS simple_shell DESTINATION share/zany80/plugins)
elseif(FIPS_WINDOWS)
	install(TARGETS simple_shell DESTINATION plugins)
endif()
